--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Carl Wilson's GitHub page</title>
 </head>
 <body>
-  <h3>Coming Soon...</h3>
+  <h3>under construction...</h3>
 </body>
 </html>
