Replaced misleading message.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>Carl Wilson's GitHub page</title>
 </head>
 <body>
-  <h3>under construction...</h3>
+  <h3>Nothing to see here...</h3>
 </body>
 </html>
